KRSupdated_09122021/force-app/main/default/objects/Category__c/fields/CategoryLevel__c.field-meta.xml
<CustomField>
    <fullName>CategoryLevel__c</fullName>
    <label>CategoryLevel</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>