KRSupdated_09122021/force-app/main/default/objects/Category__c/fields/Collection__c.field-meta.xml
<CustomField>
    <fullName>Collection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection</label>
    <referenceTo>Collection__c</referenceTo>
    <relationshipLabel>Categories</relationshipLabel>
    <relationshipName>Categories</relationshipName>
    <type>Lookup</type>
</CustomField>