KRSupdated_09122021/force-app/main/default/objects/Category__c/fields/ParentCategory__c.field-meta.xml
<CustomField>
    <fullName>ParentCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ParentCategory</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Categories</relationshipLabel>
    <relationshipName>Categories</relationshipName>
    <type>Lookup</type>
</CustomField>