KRSupdated_09122021/force-app/main/default/objects/Category__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Collection__c</columns>
    <columns>ParentCategory__c</columns>
    <columns>CategoryLevel__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>